fixing overflow-x

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -872,6 +872,7 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 body {
+  max-width: 100vw;
   overflow-x: hidden;
 }
 
