--- a/src/input.css
+++ b/src/input.css
@@ -7,6 +7,7 @@
 @tailwind utilities;
 
 body {
+  max-width: 100vw;
   overflow-x: hidden;
 }
 
